# currentsensation

./: .gitignore  CITATION.cff  LICENSE  README.md  currentSensation.py  environment.yml  experimentCurrent.py  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
_legacy/: README.md
docs/: api.rst  conf.py  index.rst  overview.rst
src/currentsensation/: __init__.py  capture.py  cli.py  constants.py  experiment.py  hardware.py  scheduling.py
tests/: test_cli.py  test_constants.py  test_experiment.py  test_hardware.py  test_scheduling.py
